# JNIDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jianshengli/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/jianshengli/jnidemo/: GitAdd.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/jianshengli/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
